--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Zalando Sans Expanded', Tahoma, Verdana, sans-serif;
     overflow-x: hidden;
@@ -27,7 +31,7 @@ h2{
 }
 
 p{
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 500;
     line-height: 1.5;
 }
@@ -56,6 +60,8 @@ p{
     padding: 0.5rem 1rem;
     align-items: center;
     width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     position: relative;
@@ -215,7 +221,7 @@ body.nav-open .nav-toggle > .close{
     margin-left: 0.75rem;
     margin-top: 0;
     display: grid;
-    grid-template-columns: repeat(4, minmax(180px, 240px));
+    grid-template-columns: repeat(4, minmax(15vw, 20vw));
     gap: 0.75rem 1.5rem;
     max-height: 0;
     opacity: 0;
@@ -242,12 +248,12 @@ body.nav-open .nav-toggle > .close{
 }
 
 .nav-menu-inner{
-    height: 100%;
+    height: calc(var(--vh, 1vh) * 100);
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 1rem;
-    padding: 8vh 8vw;
+    padding: calc(var(--vh, 1vh) * 8) 8vw;
 }
 
 .nav-menu .nav-link{
@@ -267,8 +273,9 @@ body.nav-open .nav-menu{
 /* Sections / Layout */
 section{
     position: relative;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    max-width: 100%;
+    height: calc(var(--vh, 1vh) * 100);
     background-color: #1C2227;
     color: black;
     overflow: hidden;
@@ -278,7 +285,7 @@ section{
 /* Gallery */
 .gallery-section{
     background-color: #C4D9A5;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     margin: 0px;
     overflow: hidden;
 }
@@ -440,7 +447,7 @@ section{
 .outro{
     position: relative;
     width: 100vw;
-    min-height: 25vh;
+    min-height: calc(var(--vh, 1vh) * 25);
     background: #84ba88;
     color: #f0f0f0;
 }
@@ -523,7 +530,7 @@ section{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100vw;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     z-index: 10;
     transform-origin: 50% 50%;
     pointer-events: none;
@@ -531,15 +538,16 @@ section{
 }
 
 .header-1{
+      --header-1-shift: 60vw;
       position: relative;
-      padding-left: calc(var(--header-spacer-width) + 10vw);
+      padding-left: calc(var(--header-spacer-width) + var(--header-1-shift));
       width: 400vw;
-      height: 100svh;
+      height: calc(var(--vh, 1vh) * 100);
       transform: translate(0%);
       align-items: flex-start;
       padding-top: var(--header-pad-top);
       background-color: #1C2227;
-      padding-bottom: 5vh;
+      padding-bottom: calc(var(--vh, 1vh) * 5);
       display: flex;
   }
 
@@ -547,25 +555,28 @@ section{
 .project-1{
     position: relative;
     width: 400vw;
-    height: 100svh;
+    height: calc(var(--vh, 1vh) * 100);
     transform: translate(0%);
     align-items: flex-start;
     padding-top: var(--header-pad-top);
-    padding-bottom: 5vh;
+    padding-bottom: calc(var(--vh, 1vh) * 5);
 }
 
 
 .header-2{
+    --header-2-shift: 80vw;
+    display: flex;
     position: fixed;
     top:0;
     left:0;
     width: 250vw;
-    height: 100svh;
+    height: calc(var(--vh, 1vh) * 100);
     color: aliceblue;
     transform: translate(100%);
     align-items: flex-start;
     padding-top: var(--header-pad-top);
-    padding-bottom: 5vh;
+    padding-left: calc(var(--header-2-shift));
+    padding-bottom: calc(var(--vh, 1vh) * 5);
     z-index: 2;
 }
 
@@ -574,16 +585,17 @@ section{
     top: 0;
     left: 0;
     width: 200vw;
-    height: 100svh;
+    height: calc(var(--vh, 1vh) * 100);
     background-color: #C4D9A5;
     color: inherit;
     transform: translate(100%);
     align-items: flex-start;
     padding-top: var(--header-pad-top);
-    padding-bottom: 5vh;
+    padding-bottom: calc(var(--vh, 1vh) * 5);
     z-index: 2;
 }
-.header-2, .project-1, .project-2{
+
+.project-1, .project-2{
     display: flex;
     padding-left: 2rem;
 }
@@ -722,11 +734,11 @@ section{
 }
 
 .horizontal-grid-row-2[data-position="4"] h2{
-    font-size: 1.25rem;
+    font-size: 1.4rem;
 }
 
 .horizontal-grid-row[data-position="5"] h2{
-    font-size: 1.3rem;
+    font-size: 1.5rem;
 }
 
 .horizontal-grid-row-2[data-position="7"]{
@@ -769,7 +781,7 @@ section{
 }
 
 .header-1 h1:not(.background-h1) , .header-2 h1, .project-1 h1:not(.background-h1), .project-2 h1:not(.background-h1){
-    font-size: 1.15rem;
+    font-size: 1.4rem;
     line-height: 1.25;
     letter-spacing: -0.02em;
 }
@@ -781,7 +793,7 @@ section{
 }
 
 .header-2 h2{
-    font-size: 1.2rem;
+    font-size: 1.3rem;
 }
 
 
@@ -814,9 +826,10 @@ section{
     color:#f0f0f0;
 }
 .header-2 > .background-h1{
+    --header-2-BGshift: 0vw;
     position: absolute;
     top: 50%;
-    left: calc(var(--header-spacer-width));
+    left: calc(var(--header-2-BGshift));
     transform: translateY(-50%);
     width: calc(250vw - var(--header-spacer-width) - var(--header-spacer-pad));
     font-size: 15vw;
@@ -919,8 +932,41 @@ section{
 
 /* Responsive */
 @media (max-width: 1000px) {
+    body.nav-open{
+        overflow: hidden;
+    }
+
+    .nav-menu .nav-link{
+        font-size: 1.5rem;
+    }
+
+    .nav-menu{
+        width: 100%;
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+
+    .nav-menu-inner{
+        width: 100%;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
+
+    .nav-link-group{
+        flex-wrap: wrap;
+    }
+
+    .nav-submenu{
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        max-width: 100%;
+    }
+
+    .nav-sublink{
+        font-size: 1rem;
+    }
+
     p{
-        font-size: 0.75rem;
+        font-size: 1rem;
     }
     .introParagraph {
         padding: 0;
@@ -1087,12 +1133,14 @@ section{
     }
 
     .header-2{
+        --header-2-shift: 80vw;
         position: fixed;
         top: 0;
         left: 0;
+        padding-left: var(--header-2-shift);
         width: max-content;
         min-width: 250vw;
-        height: 100svh;
+        height: calc(var(--vh, 1vh) * 100);
     }
 
     .header-2 > .background-h1{
@@ -1158,13 +1206,14 @@ section{
     padding-left: calc(var(--header-spacer-width) - 15vw);
 }
 
- :root{
-    --header-spacer-width: 30vw;
-    --header-spacer-pad: 100vw;
-    --header-pad-top: 5vh;
-    --header-pad-left: 2rem;
-    --vh : 1vh;
-    --gap : 0.5rem;
+  :root{
+      --header-spacer-width: 30vw;
+      --header-spacer-pad: 100vw;
+      --header-pad-top: calc(var(--vh, 1vh) * 5);
+      --header-pad-left: 2rem;
+      --vh : 1vh;
+      --vw : 1vw;
+      --gap : 0.5rem;
     --grid-width: calc(var(--vh, 1vh) * 50);
     --grid-height: calc(var(--vh, 1vh) * 30);
  }
