--- a/projects-style.css
+++ b/projects-style.css
@@ -123,7 +123,8 @@ body[data-page="projects"] .outro{
     box-shadow: 0 24px 60px rgba(0, 0, 0, 0.35);
 }
 
-.project-media img{
+.project-media img,
+.project-media video{
     width: 100%;
     height: 100%;
     display: block;
